--- a/azureai-basic-python/src/requirements.txt
+++ b/azureai-basic-python/src/requirements.txt
@@ -1,7 +1,81 @@
-fastapi==0.111.0
-uvicorn[standard]==0.29.0
-gunicorn==22.0.0
-azure-identity==1.19.0
+aiohappyeyeballs==2.4.4
 aiohttp==3.11.1
-azure-ai-inference[prompts]
-azure-ai-projects
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+async-timeout==5.0.1
+attrs==25.1.0
+azure-ai-inference==1.0.0b8
+azure-ai-projects==1.0.0b5
+azure-core==1.32.0
+azure-identity==1.19.0
+backports.tarfile==1.2.0
+build==1.2.2.post1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cryptography==44.0.0
+dnspython==2.7.0
+docutils==0.21.2
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.111.0
+fastapi-cli==0.0.7
+frozenlist==1.5.0
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+id==1.5.0
+idna==3.10
+importlib_metadata==8.6.1
+isodate==0.7.2
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+Jinja2==3.1.5
+keyring==25.6.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+more-itertools==10.6.0
+msal==1.31.1
+multidict==6.1.0
+nh3==0.2.20
+orjson==3.10.15
+packaging==24.2
+portalocker==2.10.1
+propcache==0.2.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyJWT==2.10.1
+pyproject_hooks==1.2.0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.9.4
+rich-toolkit==0.13.2
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.37.2
+tomli==2.2.1
+twine==6.1.0
+typer==0.15.1
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==2.3.0
+uvicorn==0.29.0
+uvloop==0.21.0
+watchfiles==1.0.4
+websockets==14.2
+yarl==1.18.3
+zipp==3.21.0
